Add about page contents.

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site settings
 title: "org.nushackers.digest"
-google_analytics: 
+baseurl: ""
+url: "http://digest.nushackers.org"
 
 # Build settings
 markdown: kramdown
